--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "qae_home_assignment_chris_rhoads",
   "version": "1.0.0",
+  "private" : true,
   "description": "Rocketmiles Search and Endpoint Testing",
-  "main": "index.js",
   "scripts": {
-    "test": "test"
+    "test": "cypress open"
   },
   "repository": {
     "type": "git",
